# backend/src/entities/TrainingSession.ts
@@ -1,0 +1,29 @@
+import { Entity, PrimaryGeneratedColumn, Column, OneToMany, CreateDateColumn, UpdateDateColumn } from "typeorm";
+import { SessionAssignment } from "./SessionAssignment";
+
+@Entity()
+export class TrainingSession {
+  @PrimaryGeneratedColumn("uuid")
+  id!: string;
+
+  @Column()
+  name!: string;
+
+  @Column({ type: "date" })
+  day1!: Date;
+
+  @Column({ type: "date" })
+  day2!: Date;
+
+  @Column({ default: "Mandatory Training" })
+  type!: string;
+
+  @OneToMany(() => SessionAssignment, (assignment) => assignment.session, { cascade: true })
+  assignments!: SessionAssignment[];
+
+  @CreateDateColumn()
+  createdAt!: Date;
+
+  @UpdateDateColumn()
+  updatedAt!: Date;
+}
